Google Analytics Tracking

--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
 <head>
 	<title>Krutik Shah</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href="bootstrap.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Playfair+Display:ital,wght@1,800&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9LXVKJ7DK8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9LXVKJ7DK8');
+  </script>
 </head>
 <body>
 	<!-- navigation bar -->
@@ -127,9 +139,6 @@
       </div>
       <div class="carousel-item">
         <img src="Pictures/Photography/IMG15.jpg" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="Pictures/Photography/IMG16.jpg" class="d-block w-100">
       </div>
       <div class="carousel-item">
         <img src="Pictures/Photography/IMG17.jpg" class="d-block w-100">
