Project upload & fixing website layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,19 @@
             <!--</div>-->
             <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
               <div class="card-header">Custom Composite DLP Printing</div>
+              <img class="card-img-top" src="Pictures\Projects\DFF.jpg" alt="Card image cap" width="350" height="300">
+              <div class="card-body">
+                <p class="card-text">D-Flip-Flop in Master/Slave configuration using Preset & Clear, designed and simulated in Cadence Virtuoso with full standard-cell library/snap-together layout. Final project for Very Large Scale Integration (VLSI).</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/DFF-MasterSlave.pdf">View Documentation</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/VLSI-Final-Project">View Project Repository</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
+              <div class="card-header">Custom Composite DLP Printing</div>
               <img class="card-img-top" src="Pictures\Projects\CompositePrinter.JPG" alt="Card image cap" width="350" height="300">
               <div class="card-body">
                 <p class="card-text">Custom resin 3D printer developed to create composite parts out of resin and fiberglass mats. Full resin DLP printing functionality has been achieved, and we are now developing a belt-drive system to incorporate the composites.</p>
