--- a/about.html
+++ b/about.html
@@ -137,58 +137,21 @@
           </div>
           <div class="flex-row flex-wrap justify-content-center">
             <!--<div class="row">-->
-            <div class="form-group mb-5" style="width:50em; justify-self:center;">
+            <div class="form-group mb-4 mx-auto" style="width:52em; justify-self:center;">
               <label for="message" class="col-form-label">Message *</label>
               <br>
               <textarea class="form-control" name="message" id="message" cols="4" rows="4" placeholder="Write your message" required></textarea>
             </div>
             <!--</div>-->
             <!--<div class="row-right">-->
-            <div class="form-group mb-5" style="width:25em; justify-self:center;">
+            <div class="form-group mb-4 mx-auto" style="width:52em; justify-self:center;">
               <br>
-              <button type="submit" class="btn btn-primary">Send</button>
+              <button type="submit" class="btn btn-primary mx-auto">Send</button>
               <span class="submitting"></span>
             </div>
           </div>
         </form>
       </div>
-    </div>
-  </div>
-
-  <!-- Carousel -->
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="Pictures/img1.png" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="Pictures/img2.png" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="Pictures/img3.png" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="Pictures/img4.png" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="Pictures/img6.jpg" class="d-block w-100">
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
   </div>
   
