--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
+  <script src="https://kit.fontawesome.com/93b06a4dcf.js" crossorigin="anonymous"></script>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9LXVKJ7DK8"></script>
@@ -38,13 +39,13 @@
       <div class="collapse navbar-collapse" id="navbarColor02">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
+                  <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-book"></i> Portfolio</a>
               </li>
               <li class="nav-item active">
-                  <a class="nav-link active" aria-current="page" href="#">About</a>
+                  <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-user"></i> About</a>
               </li>
           </ul>
       </div>
@@ -92,8 +93,8 @@
             </div>
           </div>
             
-          <a href="Resume.pdf" class="btn btn-primary">Resume</a>
-          <a href="https://www.linkedin.com/in/krutik-p-shah" class="btn btn-primary">LinkedIn</a>
+          <a href="Resume.pdf" class="btn btn-primary"><i class="fa-solid fa-file-lines"></i> Resume</a>
+          <a href="https://www.linkedin.com/in/krutik-p-shah" class="btn btn-primary"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
         </div>
         <div class="col">
           <img src="Pictures/img1.jpg" class="d-block w-75 rounded mx-auto">
@@ -154,7 +155,26 @@
       </div>
     </div>
   </div>
-  
+  <br>
+  <hr>
+  <footer class="mx-auto">
+    <div class="container text-center mx-auto">
+      <div class="row justify-content-md-center">
+        <div class="col-1">
+          <a href="https://www.linkedin.com/in/krutik-p-shah/"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col">
+          <p><i class="fa-regular fa-copyright"></i> 2023 Krutik Shah</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
