--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Playfair+Display:ital,wght@1,800&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/93b06a4dcf.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <!-- Google tag (gtag.js) -->
@@ -39,13 +40,13 @@
 		<div class="collapse navbar-collapse" id="navbarColor02">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
+					<a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i> Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="portfolio.html">Portfolio</a>
+					<a class="nav-link" href="portfolio.html"><i class="fa-solid fa-book"></i> Portfolio</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="about.html">About</a>
+					<a class="nav-link" href="about.html"><i class="fa-solid fa-user"></i> About</a>
 				</li>
 			</ul>
 		</div>
@@ -61,7 +62,29 @@
     </div>
     <div class="card-footer text-muted">
       -- Gandalf, Lord of the Rings: Fellowship of the Ring
+    </div>
   </div>
+  <br>
+  <hr>
+  <footer class="mx-auto">
+    <div class="container text-center mx-auto">
+      <div class="row justify-content-md-center">
+        <div class="col-1">
+          <a href="https://www.linkedin.com/in/krutik-p-shah/"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col">
+          <p><i class="fa-regular fa-copyright"></i> 2023 Krutik Shah</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 	<script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
