--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
   <link href="bootstrap.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/93b06a4dcf.js" crossorigin="anonymous"></script>
   
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9LXVKJ7DK8"></script>
@@ -35,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i>   Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+                    <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-book"></i> Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="about.html"><i class="fa-solid fa-user"></i> About</a>
                 </li>
             </ul>
         </div>
@@ -58,28 +59,16 @@
         <div class="d-flex flex-row flex-wrap justify-content-center">
           <!--<div class="row">-->
             <!--<div class="col-md-4">-->
-              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
-                <div class="card-header">Combination Lock</div>
-                <img class="card-img-top" src="Pictures\Projects\CombinationLock.png" alt="Card image cap" width="350" height="300">
-                <div class="card-body">
-                  <p class="card-text">This is a combination lock designed with Intel Quartus Prime Lite and using a DE-10 Lite FPGA.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/CombinationLock.pdf">View Documentation</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
             <!--</div>-->
             <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
-              <div class="card-header">Custom Composite DLP Printing</div>
-              <img class="card-img-top" src="Pictures\Projects\DFF.jpg" alt="Card image cap" width="350" height="300">
+              <div class="card-header">D-Flip-Flop VLSI Design</div>
+              <img class="card-img-top" src="Pictures\Projects\DFF.png" alt="Card image cap" width="350" height="300">
               <div class="card-body">
                 <p class="card-text">D-Flip-Flop in Master/Slave configuration using Preset & Clear, designed and simulated in Cadence Virtuoso with full standard-cell library/snap-together layout. Final project for Very Large Scale Integration (VLSI).</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/DFF-MasterSlave.pdf">View Documentation</a>
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/VLSI-Final-Project">View Project Repository</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/DFF-MasterSlave.pdf"><i class="fa-regular fa-file-lines"></i> Documentation</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/VLSI-Final-Project"><i class="fa-brands fa-github"></i> Repository</a>
                   </div>
                 </div>
               </div>
@@ -103,7 +92,7 @@
                 <p class="card-text">Using an RTL-SDR & an open source software "Dump1090", flights within a local area were tracked. The main goal of this project is to manually decode various ADS-B signals received by the RTL-SDR and analyze the algorithms used by Dump1090 to decode.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/ADS-B Flight Tracker.pdf">View Documentation</a>
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/ADS-B Flight Tracker.pdf"><i class="fa-regular fa-file-lines"></i> Documentation</a>
                   </div>
                 </div>
               </div>
@@ -116,7 +105,7 @@
                   <p class="card-text">This is an embedded system designed to demonstrate a Stewart-Gough-like platform.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Stewart-Gough.pdf">View Documentation</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Stewart-Gough.pdf"><i class="fa-regular fa-file-lines"></i> Documentation</a>
                     </div>
                   </div>
                 </div>
@@ -130,7 +119,51 @@
                   <p class="card-text">This is a PCB using three oscillator circuits, demonstrating the use of non-linear components.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Tri-Oscillator.pdf">View Documentation</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Tri-Oscillator.pdf"><i class="fa-regular fa-file-lines"></i> Documentation</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="row">-->
+            <!--<div class="col-md-4">-->
+            <!--</div>-->
+            <!--<div class="col-md-4">-->
+              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
+                <div class="card-header">Keysight Equipment Tutorial Videos</div>
+                <img class="card-img-top" src="Pictures\Projects\KeysightVideos.jpg" alt="Card image cap" width="350" height="300">
+                <div class="card-body">
+                  <p class="card-text">As part of my internship with Keysight Technologies, I created videos educating viewers on how to utilize ECE equipment.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://shared-assets.adobe.com/link/c83b443d-6104-4d24-7f58-137a83f8d151"><i class="fa-solid fa-video"></i> Videos</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <!--<div class="col-md-4">-->
+              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
+                <div class="card-header">Drone</div>
+                <img class="card-img-top" src="Pictures\Projects\drone.png" alt="Card image cap" width="350" height="300">
+                <div class="card-body">
+                  <p class="card-text">This is a drone I CAD designed and 3D printed. Linked below is a video of me struggling (but succeeded) to fly through an obstacle course!</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/sec2-drone"><i class="fa-brands fa-github"></i> Repository</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://shared-assets.adobe.com/link/896dd99d-0833-4be4-4be9-ddd54c4b6d7f"><i class="fa-solid fa-video"></i> Video</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
+                <div class="card-header">Combination Lock</div>
+                <img class="card-img-top" src="Pictures\Projects\CombinationLock.png" alt="Card image cap" width="350" height="300">
+                <div class="card-body">
+                  <p class="card-text">This is a combination lock designed with Intel Quartus Prime Lite and using a DE-10 Lite FPGA.</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/CombinationLock.pdf"><i class="fa-regular fa-file-lines"></i> Documentation</a>
                     </div>
                   </div>
                 </div>
@@ -143,59 +176,23 @@
                 <div class="card-header">Rowan ECE Website</div>
                 <img class="card-img-top" src="Pictures\Projects\rowanece.png" alt="Card image cap" width="350" height="300">
                 <div class="card-body">
-                  <p class="card-text">I am a developer of the website used by Rowan College of Engineering. This is the central database of resources and services used by ECE students & faculty.</p>
+                  <p class="card-text">Helped develop the website used by Rowan College of Engineering. Central database of resources and services used by ECE students & faculty.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://gitlab.com/karastratton/resource-website">View Repository</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://gitlab.com/karastratton/resource-website"><i class="fa-brands fa-github"></i> Repository</a>
                       <a type="button" class="btn btn-sm btn-outline-secondary" href="https://rowanece.com">View Website</a>
                     </div>
                   </div>
                 </div>
               </div>
-            <!--</div>-->
-            <!--<div class="col-md-4">-->
-              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
-                <div class="card-header">Keysight Equipment Tutorial Videos</div>
-                <img class="card-img-top" src="Pictures\Projects\KeysightVideos.jpg" alt="Card image cap" width="350" height="300">
-                <div class="card-body">
-                  <p class="card-text">As part of my internship with Keysight Technologies, I created videos educating viewers on how to utilize ECE equipment.</p>
-                  <br>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://shared-assets.adobe.com/link/c83b443d-6104-4d24-7f58-137a83f8d151">View Videos</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            <!--<div class="col-md-4">-->
-              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
-                <div class="card-header">Drone</div>
-                <img class="card-img-top" src="Pictures\Projects\drone.png" alt="Card image cap" width="350" height="300">
-                <div class="card-body">
-                  <p class="card-text">This is a drone I CAD designed and 3D printed. Linked below is a video of me struggling (but succeeded) to fly through an obstacle course!</p>
-                  <br>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/sec2-drone">View Repository</a>
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://shared-assets.adobe.com/link/896dd99d-0833-4be4-4be9-ddd54c4b6d7f">View Video</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            <!--</div>-->
-          <!--</div>-->
-          <!--<div class="row">-->
-            <!--<div class="col-md-4">-->
               <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
                 <div class="card-header">This Website!</div>
                 <img class="card-img-top" src="Pictures\Projects\Website.png" alt="Card image cap" width="350" height="300">
                 <div class="card-body">
                   <p class="card-text">The website you are currently looking at is one of my projects! It is a static site built up from scratch with Bootstrap.</p>
-                  <br>
-                  <br>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/shahkr85.github.io">View Repository</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/shahkr85.github.io"><i class="fa-brands fa-github"></i> Repository</a>
                     </div>
                   </div>
                 </div>
@@ -207,6 +204,26 @@
         </div>
       </div>
     </div>
+  <br>
+  <hr>
+  <footer class="mx-auto">
+    <div class="container text-center mx-auto">
+      <div class="row justify-content-md-center">
+        <div class="col-1">
+          <a href="https://www.linkedin.com/in/krutik-p-shah/"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <br>
+          <p><i class="fa-regular fa-copyright"></i> 2023 Krutik Shah, All Rights Reserved</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
