--- a/about.html
+++ b/about.html
@@ -61,7 +61,11 @@
           <p class="p-about">
             Hello! My name is Krutik Shah. I am an Electrical & Computer Engineering major,
             at Rowan University, Class of 2023! I am passionate about PCB design & assembly,
-            3D printing, robotics, aerospace and aeronautics!
+            3D printing, robotics, aerospace and aeronautics! Outside of my career interests,
+            I am avid cinephile who loves modern horror and will rave about A24 studios.
+            I am a passionate New York Giants fan who, while not a religious man, prays for 
+            the downfall of the Philadelphia Eagles every season. I also follow the New York 
+            Knicks, Yankees, and Rangers! I love all kinds of music
           </p>
           <h3 class="h3-about">Biography</h3>
             <p class="p-about">
@@ -165,6 +169,12 @@
         </div>
         <div class="col-1">
           <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://letterboxd.com/thecrouton11/"><i class="fa-solid fa-clapperboard fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="fa-brands fa-spotify fa-3x"></i></a>
         </div>
       </div>
       <br>
