--- a/portfolio.html
+++ b/portfolio.html
@@ -215,11 +215,17 @@
         <div class="col-1">
           <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
         </div>
+        <div class="col-1">
+          <a href="https://letterboxd.com/thecrouton11/"><i class="fa-solid fa-clapperboard fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="fa-brands fa-spotify fa-3x"></i></a>
+        </div>
       </div>
       <div class="row">
         <div class="col">
           <br>
-          <p><i class="fa-regular fa-copyright"></i> 2023 Krutik Shah, All Rights Reserved</p>
+          <p><i class="fa-regular fa-copyright"></i> 2023 Krutik Shah</p>
         </div>
       </div>
     </div>
