--- a/index.html
+++ b/index.html
@@ -54,11 +54,8 @@
 	
   <!-- Quote -->
   <div class="card text-center text-white bg-dark w-50 mb-4 box-shadow mx-auto" width="25em">
-    <div class="card-header">
-      Quote
-    </div>
     <div class="card-body">
-        <h1 class="h1-quote">“All that we have to decide is what to do with the time that is given to us,”</h1>
+        <h1 class="h1-quote"> <i class="fa-solid fa-quote-left fa-2x fa-pull-left"></i> All that we have to decide is what to do with the time that is given to us,</h1>
     </div>
     <div class="card-footer text-muted">
       -- Gandalf, Lord of the Rings: Fellowship of the Ring
@@ -74,6 +71,12 @@
         </div>
         <div class="col-1">
           <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://letterboxd.com/thecrouton11/"><i class="fa-solid fa-clapperboard fa-3x"></i></a>
+        </div>
+        <div class="col-1">
+          <a href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="fa-brands fa-spotify fa-3x"></i></a>
         </div>
       </div>
       <br>
