--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             I am avid cinephile who loves modern horror and will rave about A24 studios.
             I am a passionate New York Giants fan who, while not a religious man, prays for 
             the downfall of the Philadelphia Eagles every season. I also follow the New York 
-            Knicks, Yankees, and Rangers! I love all kinds of music
+            Knicks, Yankees, and Rangers!
           </p>
           <h3 class="h3-about">Biography</h3>
             <p class="p-about">
@@ -164,16 +164,16 @@
   <footer class="mx-auto">
     <div class="container text-center mx-auto">
       <div class="row justify-content-md-center">
-        <div class="col-1">
+        <div class="col-3">
           <a href="https://www.linkedin.com/in/krutik-p-shah/"><i class="fa-brands fa-linkedin fa-3x"></i></a>
         </div>
-        <div class="col-1">
+        <div class="col-3">
           <a href="https://www.instagram.com/krutik.photography/"><i class="fa-brands fa-instagram fa-3x"></i></a>
         </div>
-        <div class="col-1">
+        <div class="col-3">
           <a href="https://letterboxd.com/thecrouton11/"><i class="fa-solid fa-clapperboard fa-3x"></i></a>
         </div>
-        <div class="col-1">
+        <div class="col-3">
           <a href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="fa-brands fa-spotify fa-3x"></i></a>
         </div>
       </div>
