--- a/projects.html
+++ b/projects.html
@@ -159,6 +159,8 @@
                         <a class="text-gradient" href="https://www.linkedin.com/in/krutik-p-shah/"><i class="bi bi-linkedin"></i></a>
                         <a class="text-gradient" href="https://github.com/shahkr85"><i class="bi bi-github"></i></a>
                         <a class="text-gradient" href="https://letterboxd.com/thecrouton11/"><i class="bi bi-film"></i></a>
+                        <a class="text-gradient" href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="bi bi-spotify"></i></a>
+                        
                         </h1>
                     </div>
                 </div>
