--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9LXVKJ7DK8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-9LXVKJ7DK8');
+        </script>
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -41,7 +51,9 @@
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Engineer &middot; Developer &middot; Leader</div></div>
-                                <div class="fs-3 fw-light text-muted">It's Hanafin time</div>
+                                <div class="fs-3 fw-light text-muted">Asc Member of Engineering Staff, Lockheed Martin RMS</div>
+                                <div class="fs-5 fw-light text-muted">Combat Systems Integration & Test/Verification</div>
+                                <br>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Electrical & Computer Engineer</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="Resume.pdf">Resume</a>
