Responsiveness & Index changes

--- a/contact.html
+++ b/contact.html
@@ -83,21 +83,20 @@
                     </div>
                 </div>
             </section>
+            <br>
+            <div class="d-flex justify-content-center fs-2 gap-4">
+                <a class="text-gradient" href="https://www.instagram.com/krutikshah1/"><i class="bi bi-instagram"></i></a>
+                <a class="text-gradient" href="https://www.linkedin.com/in/krutik-p-shah/"><i class="bi bi-linkedin"></i></a>
+                <a class="text-gradient" href="https://github.com/shahkr85"><i class="bi bi-github"></i></a>
+                <a class="text-gradient" href="https://letterboxd.com/thecrouton11/"><i class="bi bi-film"></i></a>
+                <a class="text-gradient" href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="bi bi-spotify"></i></a>
+            </div>
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Krutik Shah 2023</div></div>
-                    <div class="col-auto d-flex fs-2 gap-4">
-                        <h1>
-                        <a class="text-gradient" href="https://www.instagram.com/krutikshah1/"><i class="bi bi-instagram"></i></a>
-                        <a class="text-gradient" href="https://www.linkedin.com/in/krutik-p-shah/"><i class="bi bi-linkedin"></i></a>
-                        <a class="text-gradient" href="https://github.com/shahkr85"><i class="bi bi-github"></i></a>
-                        <a class="text-gradient" href="https://letterboxd.com/thecrouton11/"><i class="bi bi-film"></i></a>
-                        <a class="text-gradient" href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="bi bi-spotify"></i></a>
-                        </h1>
-                    </div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Krutik Shah 2023</div>
                 </div>
             </div>
         </footer>
