--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Engineer &middot; Developer &middot; Leader</div></div>
-                                <div class="fs-3 fw-light text-muted">Asc Member of Engineering Staff, Lockheed Martin RMS</div>
-                                <div class="fs-5 fw-light text-muted">Combat Systems Integration & Test/Verification</div>
+                                <div class="fs-3 fw-light text-muted">Radar Systems Engineer</div>
+                                <div class="fs-5 fw-light text-muted">Lockheed Martin RMS</div>
                                 <br>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Electrical & Computer Engineer</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -194,8 +194,9 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">Hello! My name is Krutik Shah. I am currently
-                                    working at Lockheed Martin as an Associate Member of Engineering Staff.
+                                    working at Lockheed Martin as an Radar Systems Engineer.
                                     I have a Bachelor's degree in Electrical & Computer Engineering (ECE) from Rowan University (Class of 2023).
+                                    I am currently working on my Master's degree in Space Systems Engineering from Johns Hopkins University.
                                 <p class="text-muted">I was born in Kalol, India and I moved to the US in 2007 with my parents.
                                     I grew up in Flemington, NJ where I went to Hunterdon Central Regional High School.
                                     At the high school, I was a part of the FIRST Robotics Team (FRC) Team 3637.
@@ -207,11 +208,7 @@
                                     I also was the Vice President of the American Institute of Aeronautics & Astronautics (AIAA),
                                     the student branch at Rowan University.
                                     <br><br>
-                                    I am passionate about PCB design & assembly, 3D printing, robotics, aerospace and aeronautics! Outside of my career interests,
-                                    I am avid cinephile who loves modern horror movies among various other genres.
-                                    I am a passionate New York Giants and New York Knicks fan. I also follow the New York 
-                                    Yankees and Rangers! I enjoy going to concerts and hanging out with my friends on my free time.
-                                    I listen to all kinds of music, but I really enjoy EDM the most!
+                                    I am passionate about PCB design & assembly, 3D printing, robotics, aerospace and aeronautics!
                                 </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://www.instagram.com/krutikshah1/"><i class="bi bi-instagram"></i></a>
