--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Projects</title>
@@ -55,9 +55,9 @@
                             <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
-                                        <div class="p-5">
+                                        <div class="p-5 ">
                                             <h2 class="fw-bolder">D-Flip-Flop: VLSI Design</h2>
-                                            <p>D-Flip-Flop in Master/Slave configuration using Preset & Clear, designed and simulated in Cadence Virtuoso with full standard-cell library/snap-together layout. Final project for Very Large Scale Integration (VLSI).</p>
+                                            <p>D-Flip-Flop in Master & Slave configuration using Preset & Clear, designed and simulated in Cadence Virtuoso with full standard-cell library/snap-together layout. Final project for Very Large Scale Integration (VLSI).</p>
                                             <h1>
                                                 <a class="text-gradient" href="Projects/DFF-MasterSlave.pdf"><i class="bi bi-file-earmark-text"></i></a>
                                                 <a class="text-gradient" href="https://github.com/shahkr85/VLSI-Final-Project"><i class="bi bi-github"></i></a>
@@ -73,7 +73,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">ADS-B Flight Tracker</h2>
-                                            <p>Using an RTL-SDR & an open source software "Dump1090", flights within a local area were tracked. The main goal of this project is to manually decode various ADS-B signals received by the RTL-SDR and analyze the algorithms used by Dump1090 to decode.</p>
+                                            <p>Using an RTL-SDR & an open source software called "Dump1090", flights within a local area were tracked. The main goal of this project is to manually decode various ADS-B signals received by the RTL-SDR and analyze the algorithms used by Dump1090 to decode.</p>
                                             <h1>
                                                 <a class="text-gradient" href="Projects/ADS-B Flight Tracker.pdf"><i class="bi bi-file-earmark-text"></i></a>
                                             </h1>
@@ -157,22 +157,20 @@
                     </div>
                 </div>
             </section>
+            <br>
+            <div class="d-flex justify-content-center fs-2 gap-4">
+                <a class="text-gradient" href="https://www.instagram.com/krutikshah1/"><i class="bi bi-instagram"></i></a>
+                <a class="text-gradient" href="https://www.linkedin.com/in/krutik-p-shah/"><i class="bi bi-linkedin"></i></a>
+                <a class="text-gradient" href="https://github.com/shahkr85"><i class="bi bi-github"></i></a>
+                <a class="text-gradient" href="https://letterboxd.com/thecrouton11/"><i class="bi bi-film"></i></a>
+                <a class="text-gradient" href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="bi bi-spotify"></i></a>
+            </div>
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Krutik Shah 2023</div></div>
-                    <div class="col-auto d-flex fs-2 gap-4">
-                        <h1>
-                        <a class="text-gradient" href="https://www.instagram.com/krutikshah1/"><i class="bi bi-instagram"></i></a>
-                        <a class="text-gradient" href="https://www.linkedin.com/in/krutik-p-shah/"><i class="bi bi-linkedin"></i></a>
-                        <a class="text-gradient" href="https://github.com/shahkr85"><i class="bi bi-github"></i></a>
-                        <a class="text-gradient" href="https://letterboxd.com/thecrouton11/"><i class="bi bi-film"></i></a>
-                        <a class="text-gradient" href="https://open.spotify.com/user/krutikftw?si=a21f09a5f78943d0"><i class="bi bi-spotify"></i></a>
-                        
-                        </h1>
-                    </div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; Krutik Shah 2023</div>
                 </div>
             </div>
         </footer>
