--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,7 @@
                                         <button class="btn btn-primary btn-lg g-recaptcha" 
                                             data-sitekey="6Ld7sd8qAAAAAIO-Uj_ZT4kkA8v6q1-dtgaxqjqR" 
                                             data-callback='onSubmit' 
-                                            data-action='submit'
-                                            type='submit'>Submit</button>
+                                            data-action='submit'>Submit</button>
                                     </div>
                                 </form>
                             </div>
