--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,7 @@
 
             gtag('config', 'G-9LXVKJ7DK8');
         </script>
-        <script src="https://www.google.com/recaptcha/api.js"></script>
-        <script>
-            function onSubmit(token) {
-                document.getElementById("demo-form").submit();
-            }
-        </script>
+        <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
     </head>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
