--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,13 @@
 
             gtag('config', 'G-9LXVKJ7DK8');
         </script>
-        <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdApN8qAAAAAGpFqGqoSKTdirst_bkwD_s4mhjN"></script>
+        <!-- Replace the variables below. -->
+        <script>
+            function onSubmit(token) {
+            document.getElementById("demo-form").submit();
+            }
+        </script>
     </head>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
@@ -78,8 +84,8 @@
                                         <label for="message">Message</label>
                                     </div>
                                     <div class="d-grid">
-                                        <button class="btn btn-primary btn-lg g-recaptcha" 
-                                            data-sitekey="6Lf0ut8qAAAAAGHFN8cFLm_joPDtFeHYaQX9Yjfy" 
+                                        <button class="g-recaptcha btn btn-primary btn-lg " 
+                                            data-sitekey="6LdApN8qAAAAAGpFqGqoSKTdirst_bkwD_s4mhjN" 
                                             data-callback='onSubmit' 
                                             data-action='submit'>Submit</button>
                                     </div>
