--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,6 @@
             gtag('config', 'G-9LXVKJ7DK8');
         </script>
         <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdApN8qAAAAAGpFqGqoSKTdirst_bkwD_s4mhjN"></script>
-        <!-- Replace the variables below. -->
-        <script>
-            function onSubmit(token) {
-            document.getElementById("demo-form").submit();
-            }
-        </script>
     </head>
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
@@ -90,6 +84,11 @@
                                             data-action='submit'>Submit</button>
                                     </div>
                                 </form>
+                                <script>
+                                    function onSubmit(token) {
+                                    document.getElementById("contactForm").submit();
+                                    }
+                                </script>
                             </div>
                         </div>
                     </div>
